--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,7 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "~2.1.1",
-    "angular": "~1.2.22"
+    "angular": "^1.5.5",
+    "jquery": "^2.2.3"
   }
 }
